--- a/Source/project.config.json
+++ b/Source/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
 	"appid": "wxe0dfb422bf6df0d0",
-	"projectname": "%E8%B6%85%E5%BF%AB%E5%9B%9E%E6%94%B6",
+	"projectname": "%E8%B6%85%E5%BF%AB%E5%9B%9E%E6%94%B6%E9%91%AB%E7%9A%84",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
