--- a/Source/app.json
+++ b/Source/app.json
@@ -1,6 +1,7 @@
 {
   "pages":[
     "pages/home/home",
+    "pages/selectmodel/selectmodel",
     "pages/fastrecovery/fastrecovery",
     "pages/problem/problem",
     "pages/myorder/myorder",
